# hackathon_ai_agents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
modules/analyst/: Dockerfile  docker-compose.yml  pyproject.toml
modules/analyst/migrations/: 001_create_knowledge_documents.sql  002_seed_knowledge_documents.sql
modules/analyst/scripts/: bootstrap_knowledge_db.py  expand_json_descriptions.py  seed_knowledge_documents.py
modules/analyst/src/analyst/: __init__.py  config.py  gateway.py  main.py  observability.py  orchestrator.py  session.py
modules/analyst/src/analyst/chains/: __init__.py  agent_match.py  architecture_proposal.py  clarification.py  domain_routing.py  entities.py  intent.py  llm_client.py  requirements.py  sufficiency.py
modules/analyst/src/analyst/data/: agents.json  apis_catalog.json  checklist_templates.json  domain_relations.json  domains.json  infrastructure_catalog.json  monitoring_standards.json  policies_catalog.json  snippets_summaries.json  (+1 more)
modules/analyst/tests/: conftest.py  test_agent_catalog.py  test_agent_match_chain.py  test_clarification_chain.py  test_code_knowledge.py  test_domain_chain.py  test_e2e_build_compose.py  test_e2e_exhaustive.py  test_e2e_force_finalize.py  test_e2e_mcp_down.py  test_e2e_redirect.py  test_e2e_topic_change.py  test_enrichment.py  test_entity_chain.py  test_gateway.py  test_intent_chain.py  test_models.py  test_session.py  test_sufficiency_chain.py
modules/architect/: Dockerfile  pyproject.toml
modules/architect/app/: config.py
modules/architect/app/agents/: context_utils.py  graph.py  state.py
modules/architect/app/llm/: client.py  json_utils.py  logger.py  yandex_embeddings.py
modules/architect/app/schemas/: requests.py
modules/architect/docs/diagrams/: c2-container.mmd  c3-component-architect.mmd  c4-code-graph.mmd
modules/architect/scripts/: inject_patterns.py
modules/architect/scripts/patterns/: cqrs.md  event_driven.md  hexagonal.md  multi_agent.md  mvc.md  rag_agent.md  saga.md
modules/architect/tests/: test_nodes.py
modules/mval/: .env.example  Dockerfile  Dockerfile.redteam  docker-compose.yml  pyproject.toml
modules/mval/migrations/: 001_create_policy_rules.sql
modules/mval/scripts/: seed_policies.py
modules/mval/src/mval/: __init__.py  config.py  dependencies.py  main.py
modules/mval/tests/: conftest.py  test_arbiter.py  test_architecture_validator.py  test_gateway.py  test_integration.py  test_policy_api.py  test_policy_engine.py  test_request_validator.py
(+89 files in other folders)
