[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mval"
version = "0.1.0"
description = "МВАЛ — Validation Module (Gatekeeper) for Enterprise Multi-Agent System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "fakeredis[json]>=2.21.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
